[package]
name = "haze"
version = "2.0.0"
edition = "2021"
description = "Dead simple world management tool for Minecraft Bedrock."

[dependencies]
anstyle = "1.0.8"
clap = { version = "4.5.17", features = ["derive"] }
color-print = "0.3.6"
env_logger = "0.11.5"
fs_extra = "1.3.0"
glob = "0.3.1"
json-strip-comments = "1.0.4"
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
walkdir = "2.5.0"

[dev-dependencies]
insta-cmd = "0.6.0"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
